add open api to create scheduled task
